--- a/GGC.TestCaseGenerator/Views/Home/Index.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/Index.cshtml
@@ -3,29 +3,23 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <h1>Welcome to Testing centers</h1>
+    <br>
+    <div id="IP1">
+        <button onclick="appendRow()" value="Add box">Add InputParameters</button><br>
+        <br>
+        Input Name: @Html.TextBox("Name")
+        Input Text: @Html.TextBox("Text")
+        <br>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    <script>
+        var x = 1
+        function appendRow()
+        {
+            var d = document.getElementById('IP1');
+            Enter Equivalance Class
+            d.innerHTML += "<input type='text' id='tst" + x++ + "'><br >";
+            d.innerHTML += "<input type='text' id='tst" + x++ + "'><br >";
+        }
+    </script>
 </div>
