--- a/GGC.TestCaseGenerator/Views/Home/About.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "About";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information. HELLO WORLD</p>
+
+<h4>Meet the team</h4><br />
+<iframe src="https://onedrive.live.com/embed?cid=D4CA0C066674ED2C&resid=D4CA0C066674ED2C%2114328&authkey=AP3b7urGhYZOAg0&em=2" width="804" height="654" frameborder="0" scrolling="no" align="middle"></iframe>
