Upaded a 3 models and refined 2 views ExpectedResults and coverageGroups.

--- a/GGC.TestCaseGenerator/Views/Home/Index.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
         function appendRow()
         {
             var d = document.getElementById('IP1');
-            Enter Equivalance Class
+            d.interHTML += "Enter Equivalance Class";
             d.innerHTML += "<input type='text' id='tst" + x++ + "'><br >";
             d.innerHTML += "<input type='text' id='tst" + x++ + "'><br >";
         }
