--- a/GGC.TestCaseGenerator/Views/Shared/_Layout.cshtml
+++ b/GGC.TestCaseGenerator/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Input Parameters", "Index", "Home")</li>
                 <li>@Html.ActionLink("Coverage Groups", "CoverageGroup", "Home")</li>
-                <li>@Html.ActionLink("Expected Results", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Expected Results", "ExpectedResult", "Home")</li>
                 <li>@Html.ActionLink("Conditions", "AddSpecification", "Home")</li>
                 <li>@Html.ActionLink("Results", "AddSpecification", "Home")</li>
             </ul>
