made content changes to a few tabs. external JS file finally works. Thank god.

--- a/GGC.TestCaseGenerator/Views/Home/AddMembers.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/AddMembers.cshtml
@@ -9,16 +9,21 @@
  {
 
     <script src="~/Scripts/specification-converage.js"></script>
- }
+}
 
 <style>
 
-    button {
+    button{
         margin-right: 15px;
     }
 </style>
+
 <body>
     <div class="jumbotron">
+
+        <div id="groupNamesList">
+
+        </div>
 
         <form method="post">
             <br>
@@ -26,23 +31,27 @@
             <p style="font-size:small;">Choose group name then add input parameters as group members.</p>
 
             <div id="selectMember">
-                <label for="members">Choose group name:</label>
-                <select id="member" name="member">
-                    <option value="Val1">Value 1</option>
-                    <option value="Val2">Value 2</option>
-                    <option value="Val3">Value 3</option>
-                    <option value="Val4">Value 4</option>
-                </select>
+                <label for="members">Group A:</label>
+
+                <!-- <select id="member" name="member">
+                     <option value="Val1">Value 1</option>
+                     <option value="Val2">Value 2</option>
+                     <option value="Val3">Value 3</option>
+                     <option value="Val4">Value 4</option>
+                </select>-->
+
                 <input type="button" onclick="AddMemberDropdown()" value="Add Members" />
                 <input type="button" onclick="testReference()" value="TEST REF" />
                 <div id="memberBox" style="padding-left: 50px;"></div>
             </div><br />
+
             <input class="btn btn-success" onclick="SubmitGroupName()" type="submit" value="Submit Coverage Group" />
         </form>
     </div>
 
 </body>
 
+<!--
 <script type="text/javascript">
 
     var groupNameList = [];
@@ -50,7 +59,7 @@
 
     //Adding members to group ...
 
-    function GetDynamicTextbox(value) {
+    /*function GetDynamicTextbox(value) {
         return '<div><label for= "member"> Choose groupSX name:</label><select id="member" name="member"><option value="Val1">Value 1</option><option value="Val2">Value 2</option><option value="Val3">Value 3</option><option value="Val4">Value 4</option></select><input type="button" onclick="RemoveTextBox()" value="Remove Group" /></div>';
     }
 
@@ -62,7 +71,7 @@
 
     function RemoveTextBox(div) {
         document.getElementById("selectMember").removeChild(div.parentNode.parentNode);
-    }
+    }*/
 
     //Dropdown box
 
@@ -85,7 +94,5 @@
         console.log(groupNameList);
         console.log(groupname);
     }
-</script>
-
-
+</script> -->
 <!-- <script type="text/javascript" src="Scripts/common.js"></script> -->
