--- a/GGC.TestCaseGenerator/Views/Home/CoverageGroup.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/CoverageGroup.cshtml
@@ -7,6 +7,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@section scripts
+ {
+
+    <script src="~/Scripts/specification-converage.js"></script>
+}
+
 <style>
 
     button {
@@ -16,10 +22,6 @@
 
 <body>
     <div class="jumbotron">
-        <!--<div id="CovDiv">
-            <button onclick="appendRow()" value="Add Row">Add Coverage Group</button>
-            <button onclick="removeRow()" value="Remove Row">Remove Coverage Group</button><br />
-        </div>-->
         <form method="post">
             <br>
             <label>Add Coverage Group</label>
@@ -28,66 +30,8 @@
                 <input type="text" id="groupname" name="groupname" style="width:200px" /><input type="button" onclick="AddInputField()" value="Add Group Name" />
             </div><br />
             <input class="btn btn-success" onclick="SubmitGroupName()" type="submit" value="Submit Coverage Group Names" />
-            <!--<button class="btn btn-success" onclick="SubmitGroupName()" type="submit" stylefont-size: 16px>Submit Coverage Group Names</button>-->
             <br>
         </form>
     </div>
 
 </body>
-
-<script type="text/javascript">
-
-    var groupNameList = [];
-    var groupname = document.getElementById('groupname').value;
-
-    function GetDynamicTextbox(value) {
-        return '<div><input type="text" name="groupname" style="width:200px" /><input type ="button" onclick="RemoveTextBox(this)" value="Remove Group Name"/></div>';
-    }
-
-    function AddInputField() {
-        var div = document.createElement('DIV');
-        div.innerHTML = GetDynamicTextbox("");
-        document.getElementById("CovGroupName").appendChild(div);
-    }
-
-    function RemoveTextBox(div) {
-        document.getElementById("CovGroupName").removeChild(div.parentNode.parentNode);
-    }
-
-    function SubmitGroupName() {
-        groupNameList.push(groupname);
-        console.log(groupNameList);
-        console.log(groupname);
-    }
-
-</script>
-
-
-<!-- <script>
-     var CovGroupList = ['Test'];
-     var x = 1
-     function appendRow() {
-
-         var d = document.getElementById('CovDiv');
-         d.innerHTML += "<label>Coverage Group Name:</label><input type='text' id='CovGroupName" + x++ + "'><br >";
-
-     }
-
-
-
-     //append drop down is supposed to show a drop down box but currently it wont even show a label and input.
-     var y = 1;
-     function apprendDropDown() {
-         var parameter = document.getElementById('MemberDiv');
-         parameter.innerHTML += "<label>Members:</label>";
-         parameter.innerHTML += "<input type='text' id='CovMembers" + y++ + "'>";
-     }
-
-     var check = 1
-     function submitGroupName() {
-         var input = document.getElementById('CovDiv');
-         CovGroupList.push(CovGroupName);
-         console.log(CovGroupList);
-     }
- </script>-->
-<!--<script src="~/Scripts/specification-converage.js"></script>-->
