coverage group to controller to c# object

--- a/GGC.TestCaseGenerator/Views/Home/Index.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/Index.cshtml
@@ -2,10 +2,17 @@
     ViewBag.Title = "Home Page";
 }
 
+<style>
+    .content {
+        margin-left: 50px;
+        font-size: 10px;
+    }
+</style>
+
 <div class="jumbotron">
     <h3>Category Parition Method</h3>
     <br>
-    <div>
+    <div class="content">
         <p>
             A method for creating functional test suites has been developed in zohich a
             test engineer analyzes the system specification, writes a series of formal test
