--- a/GGC.TestCaseGenerator/Views/Home/AddMembers.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/AddMembers.cshtml
@@ -8,7 +8,7 @@
 @section scripts
  {
 
-    <script src="~/Scripts/specification-converage.js"></script>
+    <script src="~/Scripts/specification-addmember.js"></script>
 }
 
 <style>
@@ -31,21 +31,14 @@
             <p style="font-size:small;">Choose group name then add input parameters as group members.</p>
 
             <div id="selectMember">
-                <label for="members">Group A:</label>
-
-                <!-- <select id="member" name="member">
-                     <option value="Val1">Value 1</option>
-                     <option value="Val2">Value 2</option>
-                     <option value="Val3">Value 3</option>
-                     <option value="Val4">Value 4</option>
-                </select>-->
-
+                <label for="members">Group Name</label>
+               
                 <input type="button" onclick="AddMemberDropdown()" value="Add Members" />
                 <input type="button" onclick="testReference()" value="TEST REF" />
                 <div id="memberBox" style="padding-left: 50px;"></div>
             </div><br />
 
-            <input class="btn btn-success" onclick="SubmitGroupName()" type="submit" value="Submit Coverage Group" />
+            <input class="btn btn-success" onclick="SubmitGroup()" type="submit" value="Submit Coverage Group" />
         </form>
     </div>
 
