--- a/GGC.TestCaseGenerator/Views/Home/CoverageGroup.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/CoverageGroup.cshtml
@@ -10,12 +10,13 @@
 @section scripts
  {
 
-    <script src="~/Scripts/specification-converage.js"></script>
+    <script src="~/Scripts/specification-addgroup.js"></script>
 }
 
 <style>
 
-    button {
+    button 
+    {
         margin-right: 15px;
     }
 </style>
@@ -27,7 +28,10 @@
             <label>Add Coverage Group</label>
             <p style="font-size:small;">Please enter the coverage group names of your test specification.</p>
             <div id="CovGroupName">
-                <input type="text" id="groupname" name="groupname" style="width:200px" /><input type="button" onclick="AddInputField()" value="Add Group Name" />
+                <input type="text" id="groupname" name="groupname" style="width:200px" /><input type="button" onclick="AddInputField()" value="Add Group Name" /><br /><br />
+          
+           <label>Add Members</label><br />
+                <input type="text" name="tempmembername1" style="width: 200px" /><br />     
             </div><br />
             <input class="btn btn-success" onclick="SubmitGroupName()" type="submit" value="Submit Coverage Group Names" />
             <br>
