--- a/GGC.TestCaseGenerator/Views/Shared/_Layout.cshtml
+++ b/GGC.TestCaseGenerator/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                 <li>@Html.ActionLink("Coverage Groups", "CoverageGroup", "Home")</li>
                 <li>@Html.ActionLink("Expected Results", "Contact", "Home")</li>
                 <li>@Html.ActionLink("Conditions", "AddSpecification", "Home")</li>
-                <li>@Html.ActionLink("Results", "AddSpecification", "Home")</li>
+                <li>@Html.ActionLink("Results", "Result", "Home")</li>
             </ul>
         </div>
     </div>
