--- a/GGC.TestCaseGenerator/Views/Home/CoverageGroup.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/CoverageGroup.cshtml
@@ -1,7 +1,5 @@
 ﻿@model GGC.TestCaseGenerator.Models.CoverageGroup
 
-
-
 @{
     ViewBag.Title = "Coverage Group";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -28,7 +26,7 @@
             <div id="CovGroupName">
                 <label>Add Coverage Group</label>
                 <p style="font-size:small;">Please enter the coverage group names of your test specification.</p>
-                <input type="text" id="groupname" name="groupname" style="width:200px" /><br /><br />
+                <input type="text" id="groupnameId" name="groupname" style="width:200px" /><br /><br />
                 <!--<input type="button" onclick="AddInputField()" value="Add Group Name" /><br /><br />-->
 
                 <label>Add Members</label><br />
@@ -41,5 +39,4 @@
             <br>
         </form>
     </div>
-
 </body>
