--- a/GGC.TestCaseGenerator/Views/Home/Index.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/Index.cshtml
@@ -1,25 +1,49 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
+      
 <div class="jumbotron">
     <h1>Welcome to Testing centers</h1>
     <br>
     <div id="IP1">
-        <button onclick="appendRow()" value="Add box">Add InputParameters</button><br>
-        <br>
-        Input Name: @Html.TextBox("Name")
-        Input Text: @Html.TextBox("Text")
+        <br />
+        <p><b>Click to add other Input Parameter</b></p><button onclick="appendRow1()" value="Add box">Add Input Parameter</button>
+        </br>
+        <label id="IN1" name="IN2">Input Name:</label>
+        <input id="IPara1" placeholder="Enter Input Name Here" type="text" style="width:200px" /><br />
+        <label id="IT1">Input Text:</label>
+        <input id="IPara2" placeholder="Enter Input Text Here" type="text" style="width:200px" />
         <br>
     </div>
     <script>
-        var x = 1
-        function appendRow()
-        {
-            var d = document.getElementById('IP1');
-            Enter Equivalance Class
-            d.innerHTML += "<input type='text' id='tst" + x++ + "'><br >";
-            d.innerHTML += "<input type='text' id='tst" + x++ + "'><br >";
+        var inputTest = document.getElementById('IN2').value;
+        localStorage.setItem('objectToPass', inputTest);
+        var y = 1
+        function appendRow1() {
+            var t = document.getElementById('IP1');
+            t.innerHTML += "<br><b>Enter other Input Parameters:</b>"
+            t.innerHTML += "<br>Enter Parameters Name: <input type='text' id='tst" + y++ + "'><br >";
+            t.innerHTML += "Enter Parameters:<input type='text' id='tst" + y++ + "'><br >";
+        }
+    </script>
+
+    <div id="IP2">
+        <br />
+        <p><b>Click to add other Equilvalence Classes</b></p><button onclick="appendRow2()" value="Add box">Add Equilavalence Classes</button>
+        </br>
+         <label id="IN1" name="IN2">Enter Equilvalence Class Name:</label>
+        <input id="IPara1" placeholder="Enter Equilvalence Class Name Here" type="text" style="width:200px" /><br />
+        <label id="IT1">Enter Equilvalence Class:</label>
+        <input id="IPara2" placeholder="Enter Equilvalence Class Here" type="text" style="width:200px" />
+        <br>
+    </div>
+    <script>
+        var y = 1
+        function appendRow2() {
+            var t = document.getElementById('IP2');
+            t.innerHTML += "<br><b>Enter other Equilavalence Classes:</b>"
+            t.innerHTML += "<br>Enter Equilvalence class Name: <input type='text' id='tst" + y++ + "'><br >";
+            t.innerHTML += "Enter Equilavalence Classes:<input type='text' id='tst" + y++ + "'><br >";
         }
     </script>
 </div>
