Add InputParameters and corrected the input section

--- a/GGC.TestCaseGenerator/Views/Shared/_Layout.cshtml
+++ b/GGC.TestCaseGenerator/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Input Parameters", "Index", "Home")</li>
+                <li>@Html.ActionLink("Input Parameters", "InputParameter", "Home")</li>
                 <li>@Html.ActionLink("Coverage Groups", "CoverageGroup", "Home")</li>
                 <li>@Html.ActionLink("Expected Results", "Contact", "Home")</li>
                 <li>@Html.ActionLink("Conditions", "AddSpecification", "Home")</li>
